force-app/main/default/objects/RM_DeploymentDetail__c.object
<CustomObject>
    <fields>
        <fullName>Canceled__c</fullName>
        <label>Canceled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelledbyName__c</fullName>
        <label>CancelledbyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentDeployed__c</fullName>
        <label>ComponentDeployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComponentFailureMessage__c</fullName>
        <label>ComponentFailureMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentFailure__c</fullName>
        <label>Deployment Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeployedComponent__c</fullName>
        <label>DeployedComponent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeploymentId__c</fullName>
        <label>DeploymentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Deployment No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <label>Done</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorStatusCode__c</fullName>
        <label>ErrorStatusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollBack__c</fullName>
        <label>RollBack</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RunTestErrorMessage__c</fullName>
        <label>RunTestErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateDetail__c</fullName>
        <label>StateDetail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestCompleted__c</fullName>
        <label>TestCompleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalComponent__c</fullName>
        <label>TotalComponent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTest__c</fullName>
        <label>TotalTest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RM_DeploymentDetail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_List_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My List View</label>
    </listViews>
    <nameField>
        <label>RM_DeploymentDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RM_DeploymentDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>